--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
     max-width: 800px;
     margin: 20px auto;
-    background-color: #fff;
+    background-color: #666;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -18,12 +18,12 @@ body {
 
 h1 {
     text-align: center;
-    color: #333;
+    color: #FFFFFF;
 }
 
 p {
     text-align: center;
-    color: #666;
+    color: #fff;
     font-size: 1.1em;
 }
 
@@ -32,7 +32,7 @@ p {
     width: 200px;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #7ABB3B;
     color: #fff;
     text-align: center;
     text-decoration: none;
@@ -40,7 +40,7 @@ p {
 }
 
 header {
-    background-color: #2962ff;
+    background-color: #7ABB3B;
     color: #fff;
     text-align: center;
     padding: 10px 0;
@@ -68,7 +68,7 @@ th {
 }
 
 button {
-    background-color: #2962ff;
+    background-color: #7ABB3B;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -77,5 +77,5 @@ button {
 }
 
 button:hover {
-    background-color: #0039cb;
+    background-color: #13A215;
 }
